# Flask-SocketIO-Chat

./: LICENSE  README.md  go.mod
Flask-SocketIO-Chat-7d8f9/: Flask-SocketIO-Chat.json  LICENSE  README.md  chat.py  pyproject.toml  requirements.txt
Flask-SocketIO-Chat-7d8f9/app/: __init__.py
Flask-SocketIO-Chat-7d8f9/app/main/: __init__.py  events.py  forms.py  routes.py
Flask-SocketIO-Chat-7d8f9/app/templates/: chat.component.ts  index.component.ts
Flask-SocketIO-Chat-7d8f9/output_directory/: chat_history.json
Flask-SocketIO-Chat-7d8f9/src/: __init__.py
Flask-SocketIO-Chat-7d8f9/src/main/: events.py  routes.py
Flask-SocketIO-Chat-7d8f9/src/templates/: chat.ts  index.ts
Flask-SocketIO-Chat-7d8f9/tests/: test_chat.component.ts  test_chat_component.ts  test_events.py  test_forms.py  test_index.component.ts  test_index_component.ts  test_routes.py
cmd/: main.go
internal/app/: events.go  forms.go  routes.go
templates/: chat.html  index.html
tests/: events_test.go  forms_test.go  routes_test.go
