[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-socketio-chat"
version = "0.1.0"
description = "A simple chat application using Flask-SocketIO"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/flask-socketio-chat"
"Bug Tracker" = "https://github.com/yourusername/flask-socketio-chat/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]